VZDEV/src/objects/CCPM_ActionComponent__c.object
<CustomObject>
    <fields>
        <fullName>CCPM_Action__c</fullName>
        <label>Action</label>
        <referenceTo>CCPM_Action__c</referenceTo>
        <relationshipLabel>Action Components</relationshipLabel>
        <relationshipName>CCPM_ActionComponents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CCPM_RE_Action_Component_ID__c</fullName>
        <externalId>true</externalId>
        <label>RE Action Component ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_fieldAPIName__c</fullName>
        <label>Field API Name</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_fieldValue__c</fullName>
        <label>Field Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_mergeCopyIfNullOrBlank__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merge Copy If Null Or Blank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_mergeCopy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merge Copy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CCPM_variableName__c</fullName>
        <label>Variable Name</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>RE Action Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CCPM_fieldAPIName__c</columns>
        <columns>CCPM_Action__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AC{00000}</displayFormat>
        <label>Action Components Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RE Action Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Order_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(CCPM_order__c  )</errorConditionFormula>
        <errorDisplayField>CCPM_order__c</errorDisplayField>
        <errorMessage>Order cannot be blank.</errorMessage>
    </validationRules>
</CustomObject>